// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Box Basic 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border: 1px solid rgba(0,0,0,0.12);
  height: 120px;
  opacity: 1;
  width: 120px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

<div
    className="c0"
  >
    <div
      className="c1"
    />
  </div>,
]
`;

exports[`Storyshots Components/Box With Responsive Styles 1`] = `
Array [
  <div>
    <style>
      
      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
    
    </style>
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: #FFFFFF;
  padding: 16px;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: inherit;
  border: 1px solid rgba(0,0,0,0.12);
  color: rgba(0,0,0,0.87);
  padding: 8px;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

@media screen and (min-width:960px) {
  .c1 {
    padding: 16px;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      I am a Box
    </div>
  </div>,
]
`;
